# example_alembic

./: .gitignore  README.md  pyproject.toml
assets/uml/: ERD.mdj
data/: .gitkeep
migrations/: env.py
migrations/versions/: ead6b429f6b5_init.py
src/: connect.py  main-revision-0.py  main.py  models.py  query-revision-1.py  seeds.py
